Fixed dismiss overflowing

--- a/src/styles/match.scss
+++ b/src/styles/match.scss
@@ -198,7 +198,7 @@ body {
 
 	p {
 		font-weight: 400;
-		padding-top: 4rem;
+		// padding-top: 1rem;
 	}
 
 	h1 {
@@ -415,7 +415,7 @@ body {
 		.dismissable {
 			position: absolute;
 			width: 100%;
-			height: 40vh;
+			height: 30vh;
 			bottom: 0;
 			z-index: 2;
 
@@ -428,8 +428,8 @@ body {
 			position: absolute;
 			bottom: 8rem;
 			color: #d4d4d4;
+			padding: 2rem;
 			z-index: 1;
-			pointer-events: none;
 		}
 	}
 }
